Fixed div hide overflow issue
Switched div in the Product Section 2 to show overflow, to fix button visibility issue

--- a/css/prohibition-pops.webflow.css
+++ b/css/prohibition-pops.webflow.css
@@ -193,7 +193,7 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  overflow: hidden;
+  overflow: visible;
   max-width: 90%;
   padding-right: 0vw;
   padding-left: 0vw;
